# fireform-prototype

./: .gitignore  Dockerfile  README.md  benchmark.py  pyproject.toml  pyrightconfig.json  requirements.txt
.github/workflows/: ci.yml
agencies/ems_report/: field_mapping.json
agencies/fema_ics214/: field_mapping.json
app/: streamlit_app.py
fireform/: __init__.py  __main__.py  cli.py  entity_resolver.py  extractor.py  models.py  pdf_filler.py  pipeline.py  template_mapper.py  transcriber.py  validator.py
samples/: sample_incident.txt
schemas/: incident_schema.json
templates/: README.md
tests/: fixtures_incidents.py  test_extractor.py  test_pdf_filler.py  test_pipeline_integration.py  test_validator.py
